saude-central-de-notificacao/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saude-central-de-notificacao
  labels:
    name: saude-central-de-notificacao
    app: websocket-notification-service
