saude-central-de-notificacao/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: saude-central-de-notificacao
  name: saude-central-de-notificacao
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: saude-central-de-notificacao
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        io.kompose.service: saude-central-de-notificacao
    spec:
      containers:
        - name: saude-central-de-notificacao
          image: acrcuidarnew.azurecr.io/saude-central-de-notificacao:2
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /api/notifications/channels
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/notifications/channels
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: log-volume
              mountPath: /app/logs
      volumes:
        - name: log-volume
          emptyDir:
            sizeLimit: 1Gi
      restartPolicy: Always
