saude-central-de-notificacao/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saude-central-de-notificacao-service
spec:
  selector:
    io.kompose.service: saude-central-de-notificacao
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8080
    - name: websocket
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
