saude-central-de-notificacao/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: saude-central-de-notificacao-netpol
  namespace: saude-central-de-notificacao
spec:
  podSelector:
    matchLabels:
      io.kompose.service: saude-central-de-notificacao
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    - namespaceSelector:
        matchLabels:
          name: monitoring
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - {} # Allow all egress traffic
